<resources>
    <string name="app_name">Pasarela</string>
    <string name="Serving">Preparando servidor…</string>
    <string name="NONEError">Error desconocido</string>
    <string name="removeCamera">Eliminar camara</string>
    <string name="editCamera">Editar camara</string>
    <string name="storageRequest">Storage permission request</string>
    <string name="newCamera">Nueva camara</string>
    <string name="storageRequestMsg">Necesario para guardar repeticiones</string>
    <string name="noPermissionDefault">No hay permisos de almacenamiento</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="wrongPort">Puerto no válido</string>
    <string name="actionbarText">Camaras</string>
    <string name="addCamera">Crear camara</string>
    <string name="config">Configuración general</string>
    <string name="prefOptions">Opciones generales</string>
    <string name="onPauseTxt">Pausa la grabación al sacar la aplicación de primer plano</string>
    <string name="onPauseTitle">Parar al cerrar</string>
    <string name="ips">IPs y Puertos</string>
    <string name="times">Tiempos de grabación</string>
    <string name="onResumeTxt">Empieza a grabar al iniciar la aplicación</string>
    <string name="onResumeTitle">Continuar al iniciar</string>

    <string name="key_pause">stop</string>
    <string name="key_resume">continue</string>
    <string name="key_data">data</string>

    <string name="key_reconnecttime">reconnect</string>
    <string name="key_postdelay">delay</string>
    <string name="key_videolength">length</string>

    <string name="key_publicip">ippublic</string>
    <string name="key_publicport">portpublic</string>
    <string name="key_localip">iplocal</string>
    <string name="key_localport">portlocal</string>

    <string name="onDataTxt">ATENCIÓN: Utiliza datos para subir el video al servidor</string>
    <string name="onDataTitle">Utilizar datos</string>
    <string name="reconnectTxt">Tiempo de espera de las camaras para conectarse en milisegundos</string>
    <string name="reconnectTitle">Tiempo de espera de camaras</string>
    <string name="postdelayTxt">Tiempo que se espera para guardar el video por el retardo entre las cámaras en milisegundos</string>
    <string name="postdelayTitle">Tiempo de retardo</string>
    <string name="lengthTxt">Duración de cada clip/video en milisegundos. No influye en guardar video.</string>
    <string name="lengthTitle">Duración del video</string>
    <string name="publicIpTxt">IP o hostname público donde tengas el servidor (P.ej.: 54.32.28.72 o server.ddns.net)</string>
    <string name="publicIpTitle">IP/Host publico</string>
    <string name="publicportTxt">Puerto en el que tengas el servidor público escuchando. Mayor que 0 y menor que 65536.</string>
    <string name="publicportTitle">Puerto público</string>
    <string name="localIpTxt">IP o hostname local/privado donde tengas el servidor. Debería ser una IP privada. (P.ej.: 192.168.1.201)</string>
    <string name="localIpTitle">IP/Host local/privado</string>
    <string name="localportTxt">Puerto en el que tengas el servidor local/privado escuchando. Mayor que 0 y menor que 65536.</string>
    <string name="localportTitle">Puerto local</string>
    <string name="default_ip">192.168.43.</string>
    <string name="key_directory">directory</string>
    <string name="directoryTxt">Especifica el lugar en el que es van a guardar los vídeos antes de subirlos</string>
    <string name="directoryTitle">Lugar de guardado</string>
    <string name="nameCamera">Nombre cámara</string>
    <string name="port">Puerto</string>
    <string name="noSupportedFFmpeg">FFmpeg no está soportado por el móvil</string>
    <string name="charCamera">El nombre de la cámara debe ser mayor de 3 caracteres</string>
    <string name="changeSource">Cambiar fuente de datos</string>
    <string name="edit">Editar</string>
    <string name="invalidIP">IP no válida</string>
    <string name="invalidPort">Puerto no válido</string>
    <string name="changeName">Cambiar nombre de la cámara</string>
    <string name="msgRemove">¿Seguro que quieres eliminar la cámara?</string>
    <string name="remove">Eliminar</string>
    <string name="recording">Reanudando grabación</string>
    <string name="alreadyRecording">Ya se está grabando</string>
    <string name="disableRecording">Parando grabación</string>
    <string name="savingReplay">Guardando repetición</string>
    <string name="noReplay">No se pudo guardar la repetición</string>
    <string name="recordingStart">Comenzando grabación</string>
    <string name="recordingStarted">La grabación ya ha comenzado</string>
    <string name="recordingNoStart">La grabación aún no ha comenzado</string>
    <string name="recordingEnd">Grabación realizada</string>
</resources>
