<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/config">
        <CheckBoxPreference
            android:key="@string/key_pause"
            android:summary="@string/onPauseTxt"
            android:title="@string/onPauseTitle"/>
        <CheckBoxPreference
            android:key="@string/key_resume"
            android:summary="@string/onResumeTxt"
            android:title="@string/onResumeTitle"/>
        <CheckBoxPreference
            android:key="@string/key_data"
            android:summary="@string/onDataTxt"
            android:textAppearance="@color/strokeDisabled"
            android:title="@string/onDataTitle"
            android:defaultValue="false"/>
        <ListPreference
            android:key="@string/key_directory"
            android:summary="@string/directoryTxt"
            android:title="@string/directoryTitle"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/times">
        <com.example.usuario.pasarela.Core.UI.Fragments.EditIntPreference
            android:key="@string/key_reconnecttime"
            android:summary="@string/reconnectTxt"
            android:title="@string/reconnectTitle"
            android:inputType="numberDecimal"
            android:digits="0123456789"/>
        <com.example.usuario.pasarela.Core.UI.Fragments.EditIntPreference
            android:key="@string/key_postdelay"
            android:summary="@string/postdelayTxt"
            android:title="@string/postdelayTitle"
            android:inputType="numberDecimal"
            android:digits="0123456789"/>
        <com.example.usuario.pasarela.Core.UI.Fragments.EditIntPreference
            android:key="@string/key_videolength"
            android:summary="@string/lengthTxt"
            android:title="@string/lengthTitle"
            android:inputType="numberDecimal"
            android:digits="0123456789"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ips">
        <EditTextPreference
            android:key="@string/key_publicip"
            android:summary="@string/publicIpTxt"
            android:title="@string/publicIpTitle"/>
        <com.example.usuario.pasarela.Core.UI.Fragments.EditIntPreference
            android:key="@string/key_publicport"
            android:summary="@string/publicportTxt"
            android:title="@string/publicportTitle"
            android:inputType="numberDecimal"
            android:digits="0123456789"/>
        <EditTextPreference
            android:key="@string/key_localip"
            android:summary="@string/localIpTxt"
            android:title="@string/localIpTitle"/>
        <com.example.usuario.pasarela.Core.UI.Fragments.EditIntPreference
            android:key="@string/key_localport"
            android:summary="@string/localportTxt"
            android:title="@string/localportTitle"
            android:inputType="numberDecimal"
            android:digits="0123456789"/>
    </PreferenceCategory>
</PreferenceScreen>